# hiredis_client

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  bench.cpp
conf/: bench.yaml
include/: hiredis_client.hpp
src/: hiredis_client.cpp
